[package]
name = "save_assets_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
tokio = { version = "1.22.0", features = ["full"] }
reqwest = {version = "0.11.13", features = ["json"]}
serde = {version = "^1.0.130", features = ["derive"]}
serde_json = "^1.0.67"
dotenv = "0.15.0"
hmac = "0.12.1"
sha2 = "0.10.6"
base64 = "0.13.1"